syntax = "proto3";
package s2s;

message NodeRegister
{
    message Request
    {
        int32 AreaId = 1;   //区服id
        int32 NodeId = 2;   //节点id
        string Address = 3; //地址
        string ServerName = 4;  //服务器名字
        repeated string Services = 5;   //服务名列表
    }
}

message NodeData
{
    message NodeInfo
    {
        int32 AreaId = 1;   //区服id
        int32 NodeId = 2;   //节点id
        string Address = 3; //地址
        string ServerName = 4;  //服务器名字
        repeated string Services = 5;   //服务名列表
    }
    message Array
    {
        repeated NodeInfo NodeArray = 1;
    }
}

message MysqlQuery
{
    message Request
    {
        string ProtocolName = 1;
        bytes ProtocolMessage = 2;
    }
    message Response
    {
        string ErrotStr = 1;
        repeated bytes QueryDatas = 2;
    }
}

message MysqlOper
{
    message Request
    {
        string ProtocolName = 1;
        bytes ProtocolMessage =2;
    }
    message Response
    {
        string ErrorStr = 1;
    }
}
